// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LikesService getLikes should query prisma to get the likes: prisma query get likes 1`] = `
[
  [
    {
      "select": {
        "likes_product_variation": true,
      },
      "where": {
        "likes_product_variation": {
          "product": {
            "is_deleted": false,
            "is_published": true,
          },
        },
        "user_id": "8b3ae683-0626-44be-b591-9271e288388f",
      },
    },
  ],
]
`;

exports[`LikesService toggleLike should create a new like record in the database: query w/is delete publish filters 1`] = `
[
  [
    {
      "where": {
        "id": "c0177e32-5584-4518-bbe8-5a648fa33f85",
        "product": {
          "is_deleted": false,
          "is_published": true,
        },
      },
    },
  ],
]
`;

exports[`LikesService toggleLike should delete the existing like record from the database: query w/is delete publish filters 1`] = `
[
  [
    {
      "where": {
        "id": "c0177e32-5584-4518-bbe8-5a648fa33f85",
        "product": {
          "is_deleted": false,
          "is_published": true,
        },
      },
    },
  ],
]
`;

exports[`LikesService toggleLike should throw an error for invalid product variation to like: like query w/delete publish filters 1`] = `
[
  [
    {
      "where": {
        "id": "c0177e32-5584-4518-bbe8-5a648fa33f85",
        "product": {
          "is_deleted": false,
          "is_published": true,
        },
      },
    },
  ],
]
`;

exports[`LikesService toggleLike should throw an error for invalid product variation to like: prod var not found 1`] = `"Product Variation not found!"`;
